# chrestomathy

geobench/: Makefile  README.md  spamgen.nim
geobench/d/: .gitignore  dub.sdl  dub.selections.json
geobench/d/source/: app.d
geobench/nim/: geobench.nimble
geobench/nim/src/: geobench.nim
geobench/rust/: Cargo.toml
geobench/rust/src/: main.rs
pwcheck/: Makefile  README.md  spamgen.nim
pwcheck/d/: dub.selections.json
pwcheck/d/source/: app.d
pwcheck/nim/: pwcheck.nimble
pwcheck/nim/src/: pwcheck.nim
pwcheck/ocaml/: .ocamlformat  dune-project  pwcheck.install
pwcheck/ocaml/assets/: top500.list
pwcheck/ocaml/lib/: Pwcheck.ml  dune
pwcheck/ocaml/test/: dune  test_pwcheck.ml
pwcheck/ocaml/tools/: embed.ml
pwcheck/rust/: Cargo.toml
pwcheck/rust/src/: main.rs
pwcheck/v/: pwcheck.v
