[package]
name = "pwcheck"
version = "0.1.0"
authors = ["Julian Fondren"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.6.0"
libc = "0.2.79"
regex = "1.4.1"
lazy_static = "1.4.0"
clap = "2.33.3"
hostname = "0.3.1"
shadow = "0.0.1"
